--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Ahmed Asiri",
   "license": "ISC",
   "dependencies": {
+    "aylien_textapi": "^0.7.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.1"
   },
