--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this project is for interprut the user paragraph to analyze it and return what the feeling of it",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack"
   },
   "keywords": [
     "nlp"
