--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "dev:start": "webpack-dev-server --config webpack.dev.js"
+    "dev:start": "webpack-dev-server --config webpack.dev.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Ahmed Asiri",
@@ -27,6 +28,8 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
+    "jest": "^26.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
