--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this project is for interprut the user paragraph to analyze it and return what the feeling of it",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.dev.js",
+    "start": "node src/server/server.js",
     "build": "webpack --config webpack.prod.js",
     "dev:start": "webpack-dev-server --config webpack.dev.js",
     "test": "jest"
